# Yggdrasil-UI-SKSE

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  PCH.h  plugin.cpp  vcpkg.json
include/: configuration.h  log.h  sfx.h  translations.h  ui.h  yggdrasil.h
include/menu/: shared.h
script/: configuration.cpp  log.cpp  sfx.cpp  translations.cpp  ui.cpp  yggdrasil.cpp
script/menu/: shared.cpp
